Add configurable in-memory caching to the HTTP Credentials Provider