@@ -14,7 +14,12 @@
 package io.trino.aws.proxy.server.credentials.http;
 
 import com.google.common.base.Splitter;
+import com.google.common.collect.ImmutableMap;
 import io.airlift.configuration.Config;
+import io.airlift.configuration.ConfigDescription;
+import io.airlift.units.Duration;
+import io.airlift.units.MinDuration;
+import jakarta.validation.constraints.Min;
 import jakarta.validation.constraints.NotNull;
 
 import java.net.URI;
@@ -25,7 +30,9 @@ import static com.google.common.collect.ImmutableMap.toImmutableMap;
 public class HttpCredentialsProviderConfig
 {
     private URI endpoint;
-    private Map<String, String> httpHeaders = Map.of();
+    private Map<String, String> httpHeaders = ImmutableMap.of();
+    private long cacheSize;
+    private Duration cacheTtl = Duration.ZERO;
 
     @NotNull
     public URI getEndpoint()
@@ -34,9 +41,10 @@ public class HttpCredentialsProviderConfig
     }
 
     @Config("credentials-provider.http.endpoint")
-    public HttpCredentialsProviderConfig setEndpoint(String endpoint)
+    @ConfigDescription("URL to retrieve credentials from, the username will be passed as a path under this URL")
+    public HttpCredentialsProviderConfig setEndpoint(URI endpoint)
     {
-        this.endpoint = URI.create(endpoint);
+        this.endpoint = endpoint;
         return this;
     }
 
@@ -46,6 +54,9 @@ public class HttpCredentialsProviderConfig
     }
 
     @Config("credentials-provider.http.headers")
+    @ConfigDescription(
+            "Additional headers to include in requests, in the format header-1-name:header-1-value,header-2-name:header-2-value. " +
+                    "If a header value needs to include a comma, it should be doubled")
     public HttpCredentialsProviderConfig setHttpHeaders(String httpHeadersList)
     {
         try {
@@ -61,5 +72,33 @@ public class HttpCredentialsProviderConfig
             throw new IllegalArgumentException("Invalid HTTP header list: " + httpHeadersList);
         }
         return this;
+    }
+
+    @Config("credentials-provider.http.cache-size")
+    @ConfigDescription("In-memory cache size for the credentials provider, defaults to 0 (no caching)")
+    public HttpCredentialsProviderConfig setCacheSize(long cacheSize)
+    {
+        this.cacheSize = cacheSize;
+        return this;
+    }
+
+    @Min(0)
+    public long getCacheSize()
+    {
+        return cacheSize;
+    }
+
+    @Config("credentials-provider.http.cache-ttl")
+    @ConfigDescription("In-memory cache TTL for the credentials provider, defaults to 0 seconds (no caching)")
+    public HttpCredentialsProviderConfig setCacheTtl(Duration cacheTtl)
+    {
+        this.cacheTtl = cacheTtl;
+        return this;
+    }
+
+    @MinDuration("0s")
+    public Duration getCacheTtl()
+    {
+        return cacheTtl;
     }
 }
